# webCrawler

./: Doxyfile  Makefile  README  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
res/: database.db
src/: Makefile  Makefile.am  Makefile.in  database.c  database.h  main.c  network.c  network.h  parse.c  parse.h
src/.deps/: database.Po  main.Po  network.Po  parse.Po
